# Physics-Constrained-Transformer-for-Cyclone-Trajectory-and-Damage-Prediction

./: README.md  pyproject.toml  requirements.txt
common/: __init__.py  constants.py  logging_config.py  types.py  units.py
data_ingestion/: DOCUMENTATION.md  __init__.py  loaders.py
fusion_and_constraints/: __init__.py  constraint_enforcement.py  fusion_layer.py
geospatial/: DOCUMENTATION.md  __init__.py  coordinate_models.py  distance_calculations.py  projections.py
hazard_modeling/: __init__.py  flood_risk.py  landslide_susceptibility.py  wind_damage.py
physics_extraction/: DOCUMENTATION.md  __init__.py  atmospheric_dynamics.py  force_terms.py
preprocessing/: DOCUMENTATION.md  __init__.py  alignment.py  feature_engineering.py  normalization.py
scenario_simulation/: __init__.py  impact_aggregation.py  monte_carlo.py
temporal_model/: DOCUMENTATION.md  __init__.py  physics_loss.py  tft.py
trajectory_prediction/: __init__.py  prediction_heads.py  track_generator.py
validation/: __init__.py  metrics.py  physics_tests.py
vision_perception/: DOCUMENTATION.md  __init__.py  efficientnet_encoder.py  raft_motion.py
