[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclone-physics-transformer"
version = "0.1.0"
description = "Physics-Constrained Transformer for Cyclone Trajectory and Damage Prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Linuk Perera"}
]
keywords = [
    "cyclone",
    "hurricane",
    "trajectory prediction",
    "physics-informed",
    "deep learning",
    "transformer"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyproj>=3.6",
    "xarray>=2023.0",
    "rasterio>=1.3",
    "einops>=0.7",
    "pandas>=2.0",
    "netCDF4>=1.6",
    "h5py>=3.8",
    "pint>=0.22",
    "pytest>=7.0",
    "timm>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "common*",
    "data_ingestion*",
    "preprocessing*",
    "geospatial*",
    "vision_perception*",
    "physics_extraction*",
    "temporal_model*",
    "fusion_and_constraints*",
    "trajectory_prediction*",
    "hazard_modeling*",
    "scenario_simulation*",
    "validation*",
]

[tool.pytest.ini_options]
testpaths = ["validation"]
python_files = ["*_tests.py", "test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
